--- a/todolist/src/components/LeftContainer/newDate/AddDefaultDate/addDefaultDate.css
+++ b/todolist/src/components/LeftContainer/newDate/AddDefaultDate/addDefaultDate.css
@@ -1,11 +1,18 @@
 
 .addDefaultDate {
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
 .currentDate {
-    font-size: 26;
+    font-size: 22px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+}
+
+.currentTime {
+    font-size: 32px;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
 }
