--- a/todolist/src/components/app/App.css
+++ b/todolist/src/components/app/App.css
@@ -1,6 +1,8 @@
 
 .main_container {
     margin: 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 .left__container {
@@ -8,6 +10,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 693px; 
+    width: 43%; 
     height:  800px;
+}
+
+.right__container {
+    width: 40%;
+    background-color: #090909;
+    border-radius: 10px;
+    margin-top: 27px;
+    margin-right: 15px;
 }
