--- a/todolist/src/components/app/App.css
+++ b/todolist/src/components/app/App.css
@@ -2,6 +2,7 @@
 .main_container {
     margin: 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -20,4 +21,9 @@
     border-radius: 10px;
     margin-top: 27px;
     margin-right: 15px;
+}
+
+.addFormContainer{
+    width: 100%;
+    margin-top: 37px;
 }
