work-with-calendar

--- a/todolist/src/components/LeftContainer/LeftContainerTop/AddCalendar/addCalendar.css
+++ b/todolist/src/components/LeftContainer/LeftContainerTop/AddCalendar/addCalendar.css
@@ -24,3 +24,15 @@
     font-weight: 400;
     color: #FFFFFF;
 }
+
+.blue__elem {
+    display: flex;
+    margin: 0 26px 0 26px;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: #1226DA;
+}
