--- a/todolist/src/components/AddForm/add-form.css
+++ b/todolist/src/components/AddForm/add-form.css
@@ -5,6 +5,12 @@
 }
 
 .addPost {
+    background-color: #000000;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+.addPostButton {
     display: flex;
     justify-content: center;
     align-items: center;
