--- a/todoapp/src/UserInterface/container/UserInterface.css
+++ b/todoapp/src/UserInterface/container/UserInterface.css
@@ -1,7 +1,24 @@
 .container__UserInterface {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     width: 98%;
     height: 100%;
     margin-top: 20px;
     border-radius: 10px;
     background-color: #000;
+}
+
+.userInterface__UserInfo {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 140px;
+}
+
+.userInterface__List {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 120px;
 }
