--- a/todoapp/src/UserInterface/ToDoTickets/container/ToDoTickets.css
+++ b/todoapp/src/UserInterface/ToDoTickets/container/ToDoTickets.css
@@ -1,4 +1,14 @@
 .container__ToDoTickets {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     width: 100%;
     height: 580px;
+}
+
+.ToDoTickets__Ticket {
+    width: 328px;
+    height: 110px;
+    background-color: #121ADA;
+    border-radius: 20px;
 }
