--- a/todoapp/src/BackgroundImg/container/BackgroundImg.css
+++ b/todoapp/src/BackgroundImg/container/BackgroundImg.css
@@ -3,5 +3,6 @@
     height: 407px;
     display: flex;
     margin-top: 100px;
-    justify-content: center;
+    padding-left: 100px;
+    justify-content: flex-start;
 }
